# payroll-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py  models.py  schemas.py  utils.py
app/auth/: auth.py  dependencies.py
app/routers/: hitl.py  processing.py  users.py
